# cuda-multispectral-inference-optimizer

./: .gitignore  CMakeLists.txt  README.md
baseline/: pytorch_pipeline.py
benchmarks/: benchmark.cpp
include/: cuda_utils.h
kernels/: fused_preprocess.cu  layout_transform.cu  spectral_normalize.cu
profiling/: analysis.md
